cmake_minimum_required(VERSION 3.0.0)
aux_source_directory(. SRC)
set(CMAKE_CXX_STANDARD 14)
# 编译不过的，先放这里
INCLUDE_DIRECTORIES(/home/syh/nskco/core/)
set(NOT_COMPILE)
set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} -g -fno-strict-aliasing -Og -Wall -export-dynamic -Wall -pipe  -D_GNU_SOURCE -D_REENTRANT -fPIC -Wno-deprecated -m64)
foreach(FILE_PATH ${SRC})
	string(REGEX REPLACE ".+/(.+)\\..*" "\\1" FILE_NAME ${FILE_PATH})
	list(FIND NOT_COMPILE ${FILE_NAME} RESULT)
	if(${RESULT} EQUAL -1)
		message(${FILE_NAME})
		add_executable(${FILE_NAME} ${FILE_PATH})
		target_link_libraries(${FILE_NAME}  nsk_core ${LIBS})
	endif()
endforeach()
