cmake_minimum_required(VERSION 3.0.0)
aux_source_directory(. SRC)
set(CMAKE_CXX_STANDARD 14)

foreach(FILE_PATH ${SRC})
	string(REGEX REPLACE ".+/(.+)\\..*" "\\1" FILE_NAME ${FILE_PATH})
	list(FIND NOT_COMPILE ${FILE_NAME} RESULT)
	if(${RESULT} EQUAL -1)
		message(${FILE_NAME})
		add_executable(${FILE_NAME} ${FILE_PATH})
		target_link_libraries(${FILE_NAME}  nsk_core ${LIBS})
	endif()
endforeach()
